# infinito-deployer

./: .gitignore  MIRRORS  Makefile  README.md  Test.md  Todo.md  docker-compose.ssh-test.yml  docker-compose.yml  env.example  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml  tests.yml
apps/api/: .dockerignore  Dockerfile  main.py  requirements.txt
apps/api/api/: auth.py
apps/api/roles/: role_metadata_extractor.py  role_models.py  roles_indexer.py
apps/api/services/: inventory_preview.py  logo_resolver.py  pricing_engine.py  pricing_quote.py  pricing_resolution.py  pricing_schema.py  providers.py  role_catalog.py  users.py
apps/test/arch-ssh/: Dockerfile  sshd_config
apps/web/: Dockerfile  argon2-browser.d.ts  next.config.js  package-lock.json  package.json  playwright.config.ts
examples/workspace/: README.md
project/: DoD.md  Milestones.md  Todo.md
project/items/: Credential_Generation.md  Deploy_Server_Selection_And_Layout.md  Devices_Provider_Mode_And_Order_Flow.md  Multi_Server_Inventory_Sync.md  Optional_Auth_Persistent_Workspaces.md  Role_Pricing_Variants.md  Role_Tile_Quick_Links.md  Server_Switcher_And_List_Layout.md  Software_Tab_Bundles_And_Apps.md  Store_Layout_Filters_View.md  Users_LDAP_Management_After_Setup.md  Workspace_Selection_and_Multi_Tenant.md  git.md  log.md
roles/: categories.yml
scripts/: check-max-lines.sh
tests/: __init__.py  test_deployments_router.py  test_job_runner_service.py  test_log_masking.py  test_role_filter.mjs  test_secrets_masking.py  test_sse_helpers.py
tests/python/: __init__.py
(+251 files in other folders)
